--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@icon-park/vue-next": "^1.4.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^3.1.0",
+    "axios": "^1.4.0",
     "chartist": "^0.11.4",
     "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
@@ -21,7 +22,7 @@
     "file-saver": "^2.0.5",
     "hfmath": "0.0.2",
     "html-to-image": "^1.9.0",
-    "less": "^3.13.1",
+    "less-loader": "^6.2.0",
     "lodash": "^4.17.20",
     "mitt": "^3.0.0",
     "nanoid": "^3.3.3",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
+    "@types/axios": "^0.14.0",
     "@types/chartist": "^0.11.0",
     "@types/clipboard": "^2.0.1",
     "@types/crypto-js": "^4.0.1",
@@ -77,8 +79,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^7.0.2",
-    "less": "^4.1.1",     
-    "less-loader": "^7.1.0",
+    "less": "^3.13.1",
     "sass": "^1.32.13",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.8.0",
