第一个比较完整的demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,16 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "strict": true,
+    // "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "noImplicitAny": false,
+    "noImplicitAny":false,
     "allowSyntheticDefaultImports": true,
-    "suppressImplicitAnyIndexErrors": true, //在TypeScript中使用索引访问对象，但没有明确指定索引的类型时，TypeScript会抛出一个错误。如果你设置了这个选项，TypeScript就会忽略这种错误
+    "suppressImplicitAnyIndexErrors": false, //在TypeScript中使用索引访问对象，但没有明确指定索引的类型时，TypeScript会抛出一个错误。如果你设置了这个选项，TypeScript就会忽略这种错误
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
