--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "svg-pathdata": "^6.0.0",
     "tinycolor2": "^1.4.2",
     "vue": "^3.2.31",
+    "vue-router": "^4.2.4",
     "vuedraggable": "^4.0.1"
   },
   "devDependencies": {
